--- a/examples/requirejs.html
+++ b/examples/requirejs.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <script src='vendor/three.js/build/three.min.js'></script>
+<script src='vendor/require.js/require.js'></script>
 <body style='margin: 0px; background-color: #bbbbbb; overflow: hidden;'><script>
+require([], function(){
 	var renderer	= new THREE.WebGLRenderer();
 	renderer.setSize( window.innerWidth, window.innerHeight );
 	document.body.appendChild( renderer.domElement );
@@ -61,4 +63,5 @@
 			updateFn(deltaMsec/1000, nowMsec/1000)
 		})
 	})
+})
 </script></body>
