--- a/examples/requirejs.html
+++ b/examples/requirejs.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <script src='vendor/three.js/build/three.min.js'></script>
-<script src='vendor/require.js/require.js'></script>
-<body style='margin: 0px; background-color: #bbbbbb; overflow: hidden;'><script>
+<script src='vendor/three.js/examples/js/controls/OrbitControls.js'></script>
+<body style='margin: 0px; overflow: hidden;'><script>
 require([], function(){
-	var renderer	= new THREE.WebGLRenderer();
+	//////////////////////////////////////////////////////////////////////////////////
+	//		Init
+	//////////////////////////////////////////////////////////////////////////////////
+
+	// init renderer
+	var renderer	= new THREE.WebGLRenderer({
+		antialias	: true,
+	});
+	renderer.setClearColor(new THREE.Color('lightgrey'), 1)
 	renderer.setSize( window.innerWidth, window.innerHeight );
 	document.body.appendChild( renderer.domElement );
 
-	var updateFcts	= [];
+	// array of functions for the rendering loop
+	var onRenderFcts= [];
+
+	// init scene and camera
 	var scene	= new THREE.Scene();
-	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 100 );
-	camera.position.z = 3;
+	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 1000);
+	camera.position.z = 2;
+	var controls	= new THREE.OrbitControls(camera)
 
 	//////////////////////////////////////////////////////////////////////////////////
-	//		add an object and make it move					//
+	//		add an object in the scene
 	//////////////////////////////////////////////////////////////////////////////////	
-	var geometry	= new THREE.CubeGeometry( 1, 1, 1);
-	var material	= new THREE.MeshNormalMaterial();
+	var geometry	= new THREE.TorusKnotGeometry(0.5-0.12, 0.12);
+	var material	= new THREE.MeshNormalMaterial(); 
 	var mesh	= new THREE.Mesh( geometry, material );
 	scene.add( mesh );
 	
-	updateFcts.push(function(delta, now){
-		mesh.rotation.x += 0.1 * delta * Math.PI*2;
-		mesh.rotation.y += 0.2 * delta * Math.PI*2;		
-	})
-	
 	//////////////////////////////////////////////////////////////////////////////////
-	//		Camera Controls							//
+	//		render the scene
 	//////////////////////////////////////////////////////////////////////////////////
-	var mouse	= {x : 0, y : 0}
-	document.addEventListener('mousemove', function(event){
-		mouse.x	= (event.clientX / window.innerWidth ) - 0.5
-		mouse.y	= (event.clientY / window.innerHeight) - 0.5
-	}, false)
-	updateFcts.push(function(delta, now){
-		camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-		camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
-		camera.lookAt( scene.position )
-	})
-
-
-	//////////////////////////////////////////////////////////////////////////////////
-	//		render the scene						//
-	//////////////////////////////////////////////////////////////////////////////////
-	updateFcts.push(function(){
+	onRenderFcts.push(function(){
 		renderer.render( scene, camera );		
 	})
 	
 	//////////////////////////////////////////////////////////////////////////////////
-	//		loop runner							//
+	//		run the rendering loop
 	//////////////////////////////////////////////////////////////////////////////////
 	var lastTimeMsec= null
 	requestAnimationFrame(function animate(nowMsec){
@@ -59,8 +52,8 @@ require([], function(){
 		var deltaMsec	= Math.min(200, nowMsec - lastTimeMsec)
 		lastTimeMsec	= nowMsec
 		// call each update function
-		updateFcts.forEach(function(updateFn){
-			updateFn(deltaMsec/1000, nowMsec/1000)
+		onRenderFcts.forEach(function(onRenderFct){
+			onRenderFct(deltaMsec/1000, nowMsec/1000)
 		})
 	})
 })
