--- a/examples/requirejs.html
+++ b/examples/requirejs.html
@@ -3,7 +3,10 @@
 <script src='vendor/require.js/require.js'></script>
 <script src='vendor/three.js/build/three.min.js'></script>
 <script src='vendor/three.js/examples/js/controls/OrbitControls.js'></script>
-<body style='margin: 0px; overflow: hidden;'><script>
+<div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
+	Boilerplate for <a href="http://threejs.org" target="_blank">three.js</a>
+	- works on desktop and mobile
+</div><body style='margin: 0px; overflow: hidden;'><script>
 require([], function(){
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
