--- a/examples/basic.html
+++ b/examples/basic.html
@@ -5,14 +5,14 @@
 <div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
 	Boilerplate for <a href="http://threejs.org" target="_blank">three.js</a>
 	- works on desktop and mobile
-</div><body style='margin: 0px; overflow: hidden;'><script>
+</div><body style='margin: 0px; overflow: hidden; text-align:center;'><script>
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
 
 	// init renderer
 	var renderer	= new THREE.WebGLRenderer({
-		antialias	: true
+		antialias	: true,
 	});
 	renderer.setClearColor(new THREE.Color('lightgrey'), 1)
 	renderer.setSize( window.innerWidth, window.innerHeight );
@@ -29,31 +29,31 @@
 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		add an object in the scene
-	//////////////////////////////////////////////////////////////////////////////////	
+	//////////////////////////////////////////////////////////////////////////////////
+
+	// add a torus	
 	var geometry	= new THREE.TorusKnotGeometry(0.5-0.12, 0.12);
 	var material	= new THREE.MeshNormalMaterial(); 
 	var mesh	= new THREE.Mesh( geometry, material );
 	scene.add( mesh );
 	
 	//////////////////////////////////////////////////////////////////////////////////
-	//		handle window resize
+	//		render the whole thing on the page
 	//////////////////////////////////////////////////////////////////////////////////
+
+	// handle window resize
 	window.addEventListener('resize', function(){
 		renderer.setSize( window.innerWidth, window.innerHeight )
 		camera.aspect	= window.innerWidth / window.innerHeight
 		camera.updateProjectionMatrix()		
 	}, false)
 
-	//////////////////////////////////////////////////////////////////////////////////
-	//		render the scene
-	//////////////////////////////////////////////////////////////////////////////////
+	// render the scene
 	onRenderFcts.push(function(){
 		renderer.render( scene, camera );		
 	})
 	
-	//////////////////////////////////////////////////////////////////////////////////
-	//		run the rendering loop
-	//////////////////////////////////////////////////////////////////////////////////
+	// run the rendering loop
 	var lastTimeMsec= null
 	requestAnimationFrame(function animate(nowMsec){
 		// keep looping
